5.53

* accept now has arguments for lib, lib.loc, and type; it now logs the paths of packages.
* NONR, NONR72, runNonmem, runCommand, and PLOTR now have dots in the second position of argument list, to prevent accidental partial matching.

5.52

* prev supports factors.
* merge.nm is undefined.
* as.nm no longer limits the significance of time variables.
* runhead and prev now return logical(0) if argument is logical(0).
* superset supports Fortran 95 comparison operators, e.g. IGNORE=(REP > 0), etc.

5.51

* Better logic for ignore functionality under superset.
* iterations is tolerant of NUMSIGDIG.
* worker directories purged by default in purgeRunDir, etc.
* Categorical covariates (cat.cov) in PLOTR are coerced to factor.
* snap accepts non-finite elements.
* rlog tolerates runs with maxeval:0.
* NONR:checkrunno works with control streams having comments after $PROBLEM.
* tabular.data.frame picks up source and file arguments, as for ltable.
* tabular.data.frame supports row color.
* [.keyed supports detection of defined elements.
* New functions: combinations, supp, nondecreasing, nonincreasing, monotonic.

5.50

* bugfix for only: broken since 5.46.

5.49

* c.timepoint, seq.timepoint, rep.timepoint, [.timepoint, and [[.timepoint have been replaced with *.timeline equivalents.  Intent is to support basic manipulations for duration objects as well as timepoint objects, both of which inherit from timeline.

5.48

* Further attempt to meet line length restrictions.

5.47

* Documentation has been altered to comply with new CRAN line length restrictions.

5.46

* reapply returns same class as FUN; since 5.35 class has been that of x.
* only is rewritten without ifelse, so that it does not unclass its argument.
* melt.keyed now gives a message if id.vars defaults to the key.

5.45

* crosses has been rewritten to solve a bug.  crosses(c(1,1,1),c(1,2,2)) now gives F T T not F T F.

5.44

* example(xpath2frame) is now not run, with explanation.

5.43
